# OCR-Deployment

./: .gitignore  CLAUDE.md  README.md  chart_analysis_result.txt  debug_chart_example.py  debug_example_001_accuracy.py  deploy.bat  example.txt  modal_deploy.py  ocr_result.txt  page_0_result.md  page_0_result_client.md  page_0_result_http.md  pyproject.toml  requirements.txt  test_accuracy.py  test_batch_limits.py  test_chart_fix.py  test_consolidated_endpoint.py  test_grounding_ocr.py  test_image_with_bbox.py  test_multi_page.py  test_startup_timing.py  test_variable_load.py
.claude/: settings.local.json
benchmark/: __init__.py  analyze_failures.py  analyze_poor_examples.py  compare_prompting_results.py  extraction_utils.py  load_example.py  run_all_examples.py  run_batch_benchmark.py  run_chart_benchmark.py  test_poor_examples.py  test_single_example.py  test_with_extraction.py
benchmark/data/: example_000_metadata.json  example_000_truth.json  example_000_truth.md
benchmark/results/: extraction_report_000_20250816_140145.txt  extraction_test_000_20250816_140139.json  extraction_test_000_20250816_140145.json  test_results_20250816_133103.json  test_results_20250816_133159.json  test_results_20250816_133333.json
output/: page_0_result.md
results/: client_parallel_3pages_results.json  client_parallel_6pages_results.json  client_parallel_9pages_results.json  large_batch_results.json  multi_page_results.json
src/: main.py  simple_test.py
src/ocr_deployment/: __init__.py  client.py  modal_deploy.py  modal_gpu.py
src/ocr_deployment/utils/: __init__.py
tests/: test_batch_performance.py  test_binary_vs_base64.py  test_chart_processing.py  test_client_parallel.py  test_concurrent_requests.py  test_consolidated_endpoint.py  test_horizontal_scaling.py  test_modal_client.py  test_multi_page.py  test_ocr.py  test_ocr_client.py  test_single_page.py
