[project]
name = "ocr-deployment"
version = "0.1.0"
description = "OCR Deployment with DotsOCR and benchmarking capabilities"
authors = [
    {name = "OCR Team"}
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "modal>=0.63.0",
    "datasets>=4.0.0",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
benchmark = [
    "datasets>=2.14.0",
    "jiwer>=3.0.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "huggingface-hub>=0.16.0",
]

# Windows-specific dependencies (install manually if needed)
windows = [
    "pillow-simd>=9.0.0",  # Often works better on Windows than regular Pillow
]

dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tests", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ['py39']
